<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/white">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
    <ImageView
        android:layout_width="match_parent"
        android:layout_height="150dp"
        app:srcCompat="@drawable/layout_bg3"
        android:scaleType="fitXY"/>
        <LinearLayout
            android:layout_marginTop="5dp"
            android:layout_marginEnd="8dp"
            android:id="@+id/layout_logout"
            android:layout_alignParentEnd="true"
            android:padding="5dp"
            android:gravity="center"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <ImageView
                android:src="@drawable/icons8_shutdown"
                android:layout_gravity="center"
                android:layout_width="20dp"
                android:layout_height="20dp"/>
            <TextView
                android:textColor="#FFFFFF"
                android:textStyle="bold"
                android:layout_marginStart="5dp"
                android:layout_gravity="center"
                android:textSize="12dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Logout"/>
        </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center">
    <RelativeLayout
        android:layout_marginTop="70dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">
        <de.hdodenhof.circleimageview.CircleImageView
            android:layout_centerInParent="true"
            android:layout_width="155dp"
            android:layout_height="155dp"
            android:src="#FFFFFF"/>
        <de.hdodenhof.circleimageview.CircleImageView
            android:layout_centerInParent="true"
            android:id="@+id/img_avatar"
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:src="@drawable/profile"/>
    </RelativeLayout>

        <LinearLayout
            android:layout_marginStart="5dp"
            android:gravity="center"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:padding="5dp"
                android:id="@+id/tv_email_profile"
                android:layout_gravity="center"
                android:textColor="#2196F3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="nguyenchinh992000@gmail.com"/>

            <LinearLayout
                android:layout_gravity="center"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical">
                <ImageView
                    android:layout_gravity="center"
                    android:layout_width="18dp"
                    android:layout_height="18dp"
                    android:src="@drawable/ic_baseline_edit_24"
                    app:tint="@color/black"/>

                <View
                    android:background="@color/black"
                    app:tint="@color/black"
                    android:layout_width="13dp"
                    android:layout_height="1dp"/>
            </LinearLayout>

        </LinearLayout>


        <EditText
            android:id="@+id/edt_full_name"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="16dp"
            android:background="@drawable/custom_edittext"
            android:drawablePadding="12dp"
            android:hint="Full name"
            android:maxLines="1"
            android:padding="10dp"
            android:paddingStart="12dp"
            android:paddingEnd="12dp"
            android:singleLine="true" />

        <EditText
        android:id="@+id/edt_address"
        android:hint="Address"
        android:background="@drawable/custom_edittext"
        android:drawablePadding="12dp"
        android:paddingStart="12dp"
        android:paddingEnd="12dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginTop="25dp"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:padding="10dp"
        android:maxLines="1"
        android:singleLine="true"/>
    <EditText
        android:inputType="number"
        android:id="@+id/edt_phone"
        android:hint="Phone Number"
        android:background="@drawable/custom_edittext"
        android:drawablePadding="12dp"
        android:paddingStart="12dp"
        android:paddingEnd="12dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginTop="25dp"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:padding="10dp"
        android:maxLines="1"
        android:singleLine="true"/>
    <EditText
        android:clickable="false"
        android:cursorVisible="false"
        android:focusable="false"
        android:id="@+id/edt_date"
        android:hint="Date of birth"
        android:background="@drawable/custom_edittext"
        android:drawablePadding="12dp"
        android:paddingStart="12dp"
        android:paddingEnd="12dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginTop="25dp"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:padding="10dp"
        android:maxLines="1"
        android:singleLine="true"/>

        <RelativeLayout
            android:layout_marginTop="15dp"
            android:layout_marginStart="16dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <LinearLayout
                android:gravity="center"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:textStyle="bold"
                    android:layout_marginStart="12dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Gender : "
                    android:textSize="18sp"
                    android:textColor="@color/black"/>
                <RadioGroup
                    android:id="@+id/rdo_group"
                    android:orientation="horizontal"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content">
                    <RadioButton
                        android:id="@+id/rdo_nam"
                        android:layout_marginStart="20dp"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="Nam"/>
                    <RadioButton
                        android:id="@+id/rdo_nu"
                        android:layout_marginStart="10dp"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="Nữ"/>
                </RadioGroup>
            </LinearLayout>
        </RelativeLayout>




    <Button
        android:background="@drawable/custom_button"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:id="@+id/btn_update_profile"
        android:layout_width="170dp"
        android:layout_height="wrap_content"
        android:text="Update Profile"
        android:layout_marginTop="20dp"/>

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="80dp"/>
    </LinearLayout>

</RelativeLayout>
</ScrollView>