<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/background_signin_user">

<ImageView
    android:layout_width="130dp"
    android:layout_height="130dp"

    android:layout_marginLeft="130dp"/>
    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="370dp"
        android:layout_marginStart="15dp"
        android:layout_marginEnd="15dp"
        android:layout_marginTop="30dp"
        app:cardCornerRadius="20dp"
        app:cardElevation="5dp">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="65dp"
                android:layout_margin="15dp"
                android:background="@android:color/background_light">

                <EditText
                    android:id="@+id/edt_email_user"
                    android:layout_width="match_parent"
                    android:layout_height="65dp"
                    android:background="@drawable/button"
                    android:drawableRight="@drawable/ic_email"
                    android:hint="Nhập Email"
                    android:singleLine="true" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="65dp"
                android:layout_margin="15dp"
                android:background="@android:color/background_light"
                app:passwordToggleEnabled="true">

                <EditText
                    android:id="@+id/edt_matkhau_user"
                    android:layout_width="match_parent"
                    android:layout_height="65dp"
                    android:background="@drawable/button"
                    android:hint="Nhập Mật Khẩu"
                    android:inputType="textPassword"
                    android:singleLine="true" />
            </com.google.android.material.textfield.TextInputLayout>

            <TextView
                android:textColor="#2196F3"
                android:id="@+id/tv_forgot_password"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="right"
                android:layout_marginTop="5dp"
                android:textSize="15dp"
                android:layout_marginEnd="15dp"
                android:background="?attr/selectableItemBackground"
                android:text="@string/forgotpassword" />

            <Button
                android:id="@+id/btn_dangnhap"
                android:layout_width="200dp"
                android:layout_height="55dp"
                android:layout_gravity="center"
                android:layout_marginTop="15dp"
                android:layout_marginBottom="5dp"
                android:background="@drawable/button"
                app:backgroundTint="#F44336"
                android:elevation="8dp"
                android:text="Đăng Nhập" />
            <Button
                android:id="@+id/btn_dangky"
                android:layout_width="200dp"
                android:layout_height="55dp"
                android:layout_gravity="center"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="5dp"
                android:background="@drawable/button"
                android:backgroundTint="@color/black"
                android:onClick="callRegisterFromLogin"
                android:textColor="@color/black"
                android:text="Đăng ký"
                app:backgroundTint="#f5f5dc" />


        </LinearLayout>

    </androidx.cardview.widget.CardView>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="vertical">

        <LinearLayout
            android:layout_marginTop="30dp"
            android:gravity="center"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <View
                android:layout_width="50dp"
                android:layout_height="1dp"
                android:background="#000000"/>

            <View
                android:layout_width="50dp"
                android:layout_height="1dp"
                android:background="#000000"/>
        </LinearLayout>


        <LinearLayout
            android:layout_marginTop="10dp"
            android:gravity="center"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"/>
    </LinearLayout>
</LinearLayout>