<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/hometrangchu"
        android:title="Trang chủ"
        android:icon="@drawable/baseline_home_24"/>
    <item
        android:id="@+id/canhan"
        android:title="Cá nhân"
        android:icon="@drawable/baseline_supervised_user_circle_24" />
    <item
        android:id="@+id/yeuthich"
        android:title="Yêu thích"
        android:icon="@drawable/baseline_favorite_24" />
    <item
        android:id="@+id/khac"
        android:title="Khác"
        android:icon="@drawable/ic_action_name" />
</menu>
